Music OCs > Music edits

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     title="YouTube video player" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen id="gameFrame" style="display: none;"></iframe>
-  <p><a href="#" id="musicButton">🎧 Listen to my music OCs</a></p>
+  <p><a href="#" id="musicButton">🎧 Listen to my music edits</a></p>
   <iframe width="560" height="315"
     src="https://www.youtube.com/embed/videoseries?si=ljijT8VeStcgMEHA&amp;list=PLwqjRYD9XRFrbbGa9bqWtN4em4KV1KtJi"
     title="YouTube video player" frameborder="0"
