--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
 <body>
 
-  <p><a href="https://fullwidthlowercase.itch.io/gene-o-cide-html5">🎮 Play my HTML5 game, Gene-o-cide</a></p>
-  <p><a href="https://rafaelcalamba.github.io/SCP-Foundation/">🥼 Browse my 2017 SCP fansite</a></p>
-  <p><a href="#" id="gameButton">👨‍💻 Watch my game dev/modding playlist</a></p>
+  <p><a href="https://fullwidthlowercase.itch.io/gene-o-cide-html5">🕹 Play my HTML5 game, Gene-o-cide</a></p>
+  <p><a href="https://rafaelcalamba.github.io/SCP-Foundation/">🌐 Browse my 2017 SCP fansite</a></p>
+  <p><a href="#" id="gameButton">📺 Watch my game dev/modding playlist</a></p>
   <iframe width="560" height="315"
     src="https://www.youtube.com/embed/videoseries?si=3gvJbuakNhlCiqWw&amp;list=PLwqjRYD9XRFr1B7jcCC9TV8Csm024vCzW"
     title="YouTube video player" frameborder="0"
