Add Gene-o-cide embed, add SCP logo, remove collapsible, center everything

--- a/index.html
+++ b/index.html
@@ -23,21 +23,25 @@
 </head>
 
 <body>
-
-  <p><a href="https://fullwidthlowercase.itch.io/gene-o-cide-html5">🕹 Play my HTML5 game, Gene-o-cide</a></p>
-  <p><a href="https://rafaelcalamba.github.io/SCP-Foundation/">🌐 Browse my 2017 SCP fansite</a></p>
-  <p><a href="#" id="gameButton">📺 Watch my game dev/modding playlist</a></p>
+  <p>🎮 Play my HTML5 game, Gene-o-cide</p>
+  <iframe src="https://itch.io/embed/2978784" width="552" height="167" frameborder="0"><a
+      href="https://fullwidthlowercase.itch.io/gene-o-cide-html5">Gene-o-cide HTML5 by fullwidthlowercase</a></iframe>
+  <a href="https://rafaelcalamba.github.io/SCP-Foundation/">
+    <p>🌐 Browse my 2017 SCP fansite</p>
+    <img src="scp-marble.png" alt="SCP Logo">
+  </a>
+  <p>📺 Watch my game dev/modding playlist</p>
   <iframe width="560" height="315"
     src="https://www.youtube.com/embed/videoseries?si=3gvJbuakNhlCiqWw&amp;list=PLwqjRYD9XRFr1B7jcCC9TV8Csm024vCzW"
     title="YouTube video player" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen id="gameFrame" style="display: none;"></iframe>
-  <p><a href="#" id="musicButton">🎧 Listen to my music edits</a></p>
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <p>🎧 Listen to my music edits</p>
   <iframe width="560" height="315"
     src="https://www.youtube.com/embed/videoseries?si=ljijT8VeStcgMEHA&amp;list=PLwqjRYD9XRFrbbGa9bqWtN4em4KV1KtJi"
     title="YouTube video player" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen id="musicFrame" style="display: none;"></iframe>
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <p>Website is under construction, thanks for your patience ♥</p>
   <p>Designed by Rafael Calamba
     <script>
